--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -142,3 +142,14 @@ code {
   font-weight: 600;
   line-height: 30px; /* 136.364% */
 }
+
+#button-style{
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: #FFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
