--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -153,3 +153,71 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+#map-select-card{
+  width: 300px;
+  height: 150px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: var(--white, #FFF);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+}
+
+#map-select-card-text{
+  color: var(--gray_900, #121212);
+font-family: Pretendard;
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: 26px; /* 144.444% */
+}
+
+#map-select-card-theme-text{
+  color: var(--main-color, #FF8058);
+  font-family: Pretendard;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px; /* 150% */
+}
+
+#map-select-card-background{
+  display: flex;
+  padding: 3px 8px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 6px;
+  background: #FFECE6;
+  margin-right : 2px;
+}
+
+#map-select-card-small-text{
+  color: var(--gray_500, #949494);
+
+/* body 4_medium */
+font-family: Pretendard;
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: 18px; /* 150% */
+}
+
+#map-select-card-button{
+  display: flex;
+height: 20px;
+width : 76px;
+padding: 10px 20px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 100px;
+background: var(--main-color, #FF8058);
+}
+
+#map-select-card-button-text{
+  color: var(--white, #FFF);
+font-family: Pretendard;
+font-size: 13px;
+font-style: normal;
+font-weight: 600;
+line-height: 20px; /* 142.857% */
+}
