--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -277,8 +277,8 @@ line-height: 22px; /* 122.222% */
 
 #nav-next-button{
   display: flex;
-width: 117px;
-height: 17px;
+width: 101px;
+height: 23px;
 padding: 12.5px 15.5px;
 justify-content: center;
 align-items: center;
@@ -299,8 +299,8 @@ background: var(--main-color, #FF8058);
 }
 #nav-next-button-not{
   display: flex;
-  width: 117px;
-  height: 17px;
+  width: 101px;
+  height: 23px;
 padding: 12.5px 15.5px;
 justify-content: center;
 align-items: center;
@@ -331,4 +331,46 @@ font-size: 18px;
 font-style: normal;
 font-weight: 600;
 line-height: 22px; /* 122.222% */
+}
+
+#nav-dest-text-title{
+  color: var(--gray_500, #949494);
+
+/* heading 2_semibold */
+font-family: Pretendard;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px; /* 140% */
+}
+
+#nav-dest-text-main{
+  color: var(--gray_500, #949494);
+
+/* body 3_regular */
+font-family: Pretendard;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+}
+
+#nav-dest-text-title-empha{
+  color: var(--main_text, #FF6D3F);
+font-family: Pretendard;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px; /* 140% */
+}
+
+#nav-dest-text-main-empha{
+  color: var(--main_text, #FF6D3F);
+
+/* body 3_medium */
+font-family: Pretendard;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px; /* 142.857% */
 }
