--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -434,3 +434,26 @@ margin-right: 8px;
   height: 800px;
   background: #FFFBF0;
 }
+
+#course-button{
+  display: flex;
+width: 289px;
+height: 23px;
+padding: 12.5px 15.5px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+border-radius: 100px;
+background: var(--main-color, #FF8058);
+}
+
+#course-button-text{
+  color: var(--white, #FFF);
+text-align: center;
+font-family: Pretendard;
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: 22px; /* 122.222% */
+}
