--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -90,11 +90,12 @@ code {
 
 #login-input{
   display: inline-flex;
-  padding: 13px 135px 13px 10px;
+  padding: 13px 0px 13px 10px;
   align-items: center;
   gap: 10px;
   border-radius: 8px;
   border: 1px solid var(--gray_500, #949494);
+  width : 308px;
 }
 
 #login-input::placeholder{
